@@ -3,8 +3,7 @@ The files
 	private.h tzselect.ksh checktab.awk
 come from the tzcode package by Arthur David Olson et.al.; the file
 	version.h
-has the contents that would be generated by that package's Makefile,
-and tzselect.ksh has been modified for use in glibc.
+has the contents that would be generated by that package's Makefile.
 
 The files
 	africa antarctica asia australasia europe
